[package]
name = "print-nanny-client"
version = "0.8.0rc1"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
description = "Official Print Nanny Rust API Client"
homepage = "https://print-nanny.com"
repository = "https://github.com/bitsy-ai/octoprint-nanny-webapp"
license = "AGPL-3.0"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
