[package]
name = "printnanny-api-client"
version = "0.77.1"
authors = ["Leigh Johnson <leigh@print-nanny.com>"]
homepage = "https://print-nanny.com"
repository = "https://github.com/bitsy-ai/octoprint-nanny-webapp"
license = "AGPL-3.0"
description = "Official Print Nanny Rust API Client"
edition = "2018"

[dependencies]
bytes = "1.1.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
